# carve

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
common/: CMakeLists.txt  geom_draw.cpp  geom_draw.hpp  read_ply.cpp  read_ply.hpp  write_ply.cpp
doc/: csg_operation.md  main.md  usage.md
examples/: CMakeLists.txt
include/: CMakeLists.txt
include/carve/: aabb.hpp  aabb_impl.hpp  carve.hpp  cbrt.h  classification.hpp  cmake-config.h.in  collection.hpp  collection_types.hpp  colour.hpp  convex_hull.hpp  csg.hpp  csg_triangulator.hpp  debug_hooks.hpp  edge_decl.hpp  exact.hpp  face_decl.hpp  geom.hpp  geom2d.hpp  geom3d.hpp  geom_impl.hpp  kd_node.hpp  math.hpp  math_constants.hpp  matrix.hpp  mesh.hpp  mesh_simplify.hpp  pointset_decl.hpp  pointset_impl.hpp  poly_impl.hpp  polyhedron_decl.hpp  polyhedron_impl.hpp  polyline_decl.hpp  polyline_iter.hpp  rescale.hpp  rtree.hpp  shewchuk_predicates.hpp  spacetree.hpp  sphere.hpp  tag.hpp  tree.hpp  (+8 more)
lib/: CMakeLists.txt  convex_hull.cpp  csg.cpp  geom.cpp  intersect.cpp  intersect_classify_edge.cpp  intersect_face_division.cpp  math.cpp  mesh.cpp  octree.cpp  pointset.cpp  polyhedron.cpp  polyline.cpp  shewchuk_predicates.cpp  sphere.cpp  timing.cpp  triangle.cpp  triangle_intersection.cpp  triangulator.cpp
src/: CMakeLists.txt  close_manifold.cpp  convert.cpp  cut.cpp  face_merge.cpp  intersect.cpp  selfintersect.cpp  slice.cpp  triangulate.cpp  view.cpp
tests/: CMakeLists.txt  geom2d_unittest.cpp  geom3d_unittest.cpp  heap_unittest.cpp  mersenne_twister.h  test_aabb_tri.cpp  test_carve_polyhedrons_2.cpp  test_csg_floats.cpp  test_geom.cpp  tetrahedron.cpp  tri_point_distance_unittest.cpp  triangulate_unittest.cpp
